<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".home.HomeScreenFragment"
            android:id="@+id/root">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!--Welcome Title-->
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome_text"
                    android:text="@string/welcome_text"
                    android:textSize="@dimen/welcome_user_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/thirty_two_dp"
                    android:layout_marginTop="@dimen/thirty_two_dp"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/preference_btn"
                    android:background="@drawable/ic_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/sixteen_dp"
                    android:padding="@dimen/sixteen_dp"
                    android:contentDescription="@string/settings_btn_description"/>

            <ScrollView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/thirty_two_dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/welcome_text"
                        app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/action_selection_container">

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/user_progress"
                            style="@style/AppTheme.HomeScreen.UserActionButton"
                            android:drawableTop="@drawable/ic_progress_bar" android:text="@string/user_progress"
                            android:layout_marginStart="@dimen/twenty_four_dp"
                            android:layout_marginEnd="@dimen/twenty_four_dp"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/user_active_sessions"
                            app:layout_constraintTop_toTopOf="@+id/user_active_sessions"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/user_active_sessions"
                            android:drawableTop="@drawable/ic_active_session"
                            style="@style/AppTheme.HomeScreen.UserActionButton"
                            android:text="@string/user_active_sessions"
                            app:layout_constraintStart_toEndOf="@+id/user_progress"
                            android:layout_margin="@dimen/twenty_four_dp"
                            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/user_favorite_sessions"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/user_archive"
                            android:drawableTop="@drawable/ic_archive"
                            style="@style/AppTheme.HomeScreen.UserActionButton"
                            android:layout_marginStart="@dimen/twenty_four_dp"
                            android:layout_marginEnd="@dimen/twenty_four_dp" android:text="@string/user_archive"
                            app:layout_constraintTop_toTopOf="@+id/user_favorite_sessions"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/user_favorite_sessions"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/user_favorite_sessions"
                            android:drawableTop="@drawable/ic_favorite"
                            style="@style/AppTheme.HomeScreen.UserActionButton"
                            android:text="@string/user_favorite_sessions"
                            android:layout_margin="@dimen/twenty_four_dp"
                            app:layout_constraintStart_toEndOf="@+id/user_archive"
                            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/user_active_sessions"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <!--More Info Section-->
            <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/more_info_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layoutDescription="@xml/scene_hide_show_info"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.80">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/more_info_items"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/about_btn"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            app:drawableBottomCompat="@drawable/divider_horizontal"
                            android:drawablePadding="@dimen/divider_padding"
                            style="@style/AppTheme.MoreInfo.Button"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/about_btn"/>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/credits_btn"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.MoreInfo.Button"
                            app:drawableBottomCompat="@drawable/divider_horizontal"
                            android:drawablePadding="@dimen/divider_padding"
                            app:layout_constraintTop_toBottomOf="@id/about_btn"
                            app:layout_constraintStart_toStartOf="@id/about_btn"
                            android:text="@string/credits_btn"/>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/whats_next_btn"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.MoreInfo.Button"
                            android:paddingBottom="@dimen/four_dp"
                            app:layout_constraintTop_toBottomOf="@id/credits_btn"
                            app:layout_constraintStart_toStartOf="@id/about_btn"
                            android:text="@string/whats_next_btn"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hide_show_info_btn"
                        app:layout_constraintStart_toEndOf="@id/more_info_items"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/colorPrimaryLight"
                        android:src="@drawable/transition_hide_show_more_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"/>

            </androidx.constraintlayout.motion.widget.MotionLayout>
            <!--More Info Section Ends-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--FAB-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
            <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/record_button"
                    android:layout_margin="@dimen/twenty_four_dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/ic_record"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>