<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".introslider.SlideScreen"
            android:id="@+id/root">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slide_title"
                tools:text="@string/slide_title_one" android:gravity="center"
                android:textSize="@dimen/slider_heading_text"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/sixteen_dp"
                app:layout_constraintStart_toStartOf="parent"
        />

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="300dp"
                tools:src="@drawable/image_five"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:id="@+id/slide_image" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slide_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/continue_btn"
                app:layout_constraintVertical_bias="0.13999999"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slide_info"
                tools:text="@string/slide_info_one" android:gravity="center"
                android:textSize="@dimen/slider_sub_heading_text"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/continue_btn"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/slide_image"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continue_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/continue_btn" android:layout_marginTop="@dimen/eight_dp"
                android:textColor="?attr/colorPrimary"
                android:backgroundTint="?attr/colorSecondary"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/twenty_four_dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>